<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android1:id="@+id/textView1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/TvMain"
            android1:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android1:id="@+id/button1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/b1" />

        <Button
            android1:id="@+id/button2"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/b2" />

        <Button
            android1:id="@+id/button3"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/b3" />
    </LinearLayout>

</ScrollView>