<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android1:id="@+id/editText1"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:ems="10"
            android1:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android1:id="@+id/editText2"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:ems="10"
            android1:inputType="textPassword" />

        <RadioGroup
            android1:id="@+id/radioGroup1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content" >

            <RadioButton
                android1:id="@+id/radio1"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:checked="true"
                android1:text="@string/radio1" />

            <RadioButton
                android1:id="@+id/radio2"
                android1:layout_width="wrap_content"
                android1:layout_height="wrap_content"
                android1:text="@string/radio2" />
        </RadioGroup>

        <Button
            android1:id="@+id/button1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/bAdd" />
    </LinearLayout>

</ScrollView>